external/firefox/userChrome.css
/*
Last updated: FF133.0b8 241115

1. Navigate the relevant profile directory (see `about:profiles`); use the profile in the Root Directory
2. Create a folder named `chrome` (if it doesn't exist) then create a file named userChrome.css inside it and paste this code
3. If userChrome.css doesn’t seem to work, open `about:config` and set `toolkit.legacyUserProfileCustomizations.stylesheets=true`

Other references:
Firefox Support forum - Tabs below the URL bar: https://support.mozilla.org/en-US/kb/forum-response-tabs-below-url-bar
Custom CSS tweaks for Firefox Quantum: https://github.com/Aris-t2/CustomCSSforFx
FirefoxCSS subreddit: https://www.reddit.com/r/FirefoxCSS

How to debug:
  1.  enable debugging: https://firefox-source-docs.mozilla.org/devtools-user/browser_toolbox/index.html
  2.  run: MOZ_BROWSER_TOOLBOX_PORT=6082 /Applications/Firefox\ Developer\ Edition.app/Contents/MacOS/firefox --start-debugger-server 6082
  3.  connect to debugger: CMD-OPTION-SHIFT-I
  4.  browser toolbox > style editor > userChrome.css

Credits:
https://github.com/jonhoo/configs/blob/master/gui/.mozilla/firefox/dev-edition-default/chrome/userChrome.css
https://gist.github.com/Trollwut/51bc71ba30ca0a182eb558746270ec5b
https://gist.github.com/Arty2/e6e61801531ec5ee1f9f
*/

@-moz-document url(chrome://browser/content/browser.xhtml) {
  :root {
    --user-icon-tab-size: var(--tab-pinned-width, 36px);
    --user-tab-icon-size: var(--tab-icon-size, 16px);
  }

  /* tabs on bottom of window */
  /*
	  we want to move #navigator-toolbox, but since FF72, it is wrapped in
	  a `box` element that has no identifier. we would like to use:
	    box:has(#navigator-toolbox) { -moz-box-ordinal-group: 10; }
	  but :has isn't a "live selector", so we can't use it in stylesheet
	  context. instead, we use this hack:
  */
  #mainPopupSet ~ box {
    order: 10;
  }
  #titlebar {
    order: 10;
  }
  #urlbar {
    top: unset !important;
    bottom: 0 !important;
    box-shadow: none !important;
    flex-direction: column !important;
  }
  /* when bookmarks toolbar is visible (new tab page), offset urlbar above it */
  #navigator-toolbox:has(#PersonalToolbar:not([collapsed])) #urlbar {
    bottom: 28px !important;
  }
  #urlbar[breakout] {
    display: block;
    position: absolute !important;
    height: 1000;
  }
  /* override UA rule that hides .searchmode-switcher off-screen via position:fixed;top:-999px */
  #urlbar > .urlbar-input-container > .searchmode-switcher {
    position: static !important;
    top: unset !important;
  }
  #urlbar:not([focused]) > .urlbar-input-container > .searchmode-switcher {
    display: none !important;
  }
  #urlbar,
  #searchbar .searchbar-textbox {
    font-family: Hasklug !important;
  }
  .search-one-offs {
    display: none !important;
  }
  .tab-background {
    border-top: none !important;
  }
  #navigator-toolbox {
    border: none;
    order: 10;
  }
  #navigator-toolbox[inFullscreen] {
    --tab-min-height_tnot: 0px;
    bottom: 0 !important;
  }
  #TabsToolbar > .titlebar-buttonbox-container {
    display: none !important;
  }
  #TabsToolbar[inFullscreen] {
    display: none !important;
  }
  .titlebar-spacer[type="pre-tabs"],
  .titlebar-spacer[type="post-tabs"] {
    display: none !important;
  }
  #TabsToolbar:not([inFullScreen]) {
    height: var(--tab-min-height);
    margin-bottom: 0px;
    background-color: var(--toolbar-bgcolor);
  }
  #TabsToolbar .tabbrowser-arrowscrollbox,
  #tabbrowser-tabs,
  .tab-stack {
    min-height: 28px !important;
  }
  .tabbrowser-tab {
    font-size: 80%;
  }
  .tabbrowser-tab[hidden] {
    display: none !important;
  }
  .tabbrowser-tab:not([pinned]):not([fadein]) {
    flex: 0 0 0 !important;
    margin: 0 !important;
    max-width: 0 !important;
    min-width: 0 !important;
    padding: 0 !important;
    width: 0 !important;
  }
  .tabbrowser-tab[fadein]:not([pinned]) {
    box-sizing: border-box !important;
    flex: 0 0 var(--user-icon-tab-size) !important;
    min-width: var(--user-icon-tab-size) !important;
    max-width: var(--user-icon-tab-size) !important;
    width: var(--user-icon-tab-size) !important;
  }
  .tabbrowser-tab[fadein]:not([pinned]) > .tab-stack {
    box-sizing: border-box !important;
    min-width: var(--user-icon-tab-size) !important;
    max-width: var(--user-icon-tab-size) !important;
    width: var(--user-icon-tab-size) !important;
  }
  .tabbrowser-tab[fadein]:not([pinned]) .tab-background,
  .tabbrowser-tab[fadein]:not([pinned]) .tab-content {
    box-sizing: border-box !important;
    min-width: var(--user-icon-tab-size) !important;
    max-width: var(--user-icon-tab-size) !important;
    width: var(--user-icon-tab-size) !important;
  }
  .tabbrowser-tab[fadein]:not([pinned]) .tab-label-container,
  .tabbrowser-tab[fadein]:not([pinned]) .tab-secondary-label,
  .tabbrowser-tab[fadein]:not([pinned]) .tab-close-button {
    display: none !important;
  }
  .tab-content {
    padding: 0 5px;
  }
  .tabbrowser-tab[fadein]:not([pinned]) .tab-content {
    align-items: center !important;
    justify-content: center !important;
    padding: 0 !important;
  }
  .tabbrowser-tab[fadein]:not([pinned]) .tab-icon-stack {
    flex: 0 0 var(--user-tab-icon-size) !important;
    height: var(--user-tab-icon-size) !important;
    margin-inline: 0 !important;
    min-width: var(--user-tab-icon-size) !important;
    width: var(--user-tab-icon-size) !important;
  }
  .tabbrowser-tab[fadein]:not([pinned]) .tab-icon-image {
    margin: 0 !important;
  }
  .tabbrowser-tab[fadein]:not([pinned]):not([image]) .tab-icon-image {
    display: block !important;
    list-style-image: url("chrome://branding/content/icon16.png") !important;
  }
  tab-group:not(:has(> .tabbrowser-tab[visuallyselected])) > .tabbrowser-tab {
    display: none !important;
  }
  .tab-close-button .toolbarbutton-icon {
    width: 12px !important;
    height: 12px !important;
  }
}

